fix css align text in table reward info

--- a/app/lucky-money/spin.css
+++ b/app/lucky-money/spin.css
@@ -657,11 +657,12 @@ th {
     position: sticky;
     top: 0;
     font-size: 1.5vh;
-    text-align: left;
+    text-align: left !important;
 }
 
 td {
     font-size: 1.5vh;
+    text-align: left;
 }
 
 .popup-history-header {
